  - removed:
     String substr(SignedSize start, SignedSize n) const; 
     String substr(SignedSize start) const; 
  - added:
     String substr(size_t pos = 0, size_t n = npos) const;   
     String chop(Size n) const;
- FeatureFinderAlgorithmPicked is now able to fit asymmetric retention time profiles 

TOPPView improvements:
- basic visualization of peptide identifications in idXML
- zooming beyond the last zoom stack item using the mouse wheel or CTRL+

TOPPAS improvements:
- added copy/paste for workflow items
- workflows can now include other workflows (File>Include)
- several bug fixes
- Split TOPPAS in TOPPAS and PipelineExecute TOPP-tool

Changes to the Build System:
- external code support for CMake 2.8: External Code using 
  "include (${OpenMS_USE_FILE})" in its CMakeLists.txt 
  cannot be configured against OpenMS 1.7, however, 
  only minor changes are required to fix this.
  See the documentation for "Programming with OpenMS".
- nightly tests for external code
- SVN revision used to build the lib is remembered (finer version tracking)
- nightly coverage builds
- GUI testing (experimental)
- Visual Studio 2010 support

Bug fixes:
[new tracker: http://sourceforge.net/apps/trac/open-ms/query?status=closed&group=resolution&milestone=Release+1.7]
- #23   implement protXML
- #44   TOPPView warning "Cannot show projections!"
- #46   All TOPP/UTILS segfault if /share is not found
- #53   TOPPAS select directory has save as dialog
- #54   TOPPAS select directory has save as dialog
- #55   TOPPAS context menu "open in TOPPView" does not work under MacOSX
- #58   Unit tests for nested classes
- #59   Test of external Code
- #61   automatic ini file Version number update
- #62   nightly tests for external code
- #63   rename methods named min() or max() to something else...
- #69   FileMerger needs ability to merge featureXML
- #73   Resampler: can't create PNGs with TOPPAS
- #74   Default parameters of PTModel cause infinite loop